--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "react-dom": "^18.3.1",
     "react-dropzone": "^14.2.3",
     "react-hook-form": "^7.51.4",
+    "react-icons": "^5.2.1",
     "react-just-parallax": "^3.1.16",
     "react-redux": "^8.1.3",
     "react-router-dom": "^6.23.0",
